--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="start">Поехали</string>
     <string name="start_game">Начало партии</string>
     <string name="game_2"></string>
+    <string name="reg_in">Зарегистрироваться</string>
+    <string name="log_in">Войти</string>
+    <string name="email">email</string>
+    <string name="password">password</string>
 </resources>
